fixed wrapping issue for desktop

--- a/src/app/components/solrDetails/solrDetails.directive.scss
+++ b/src/app/components/solrDetails/solrDetails.directive.scss
@@ -29,7 +29,6 @@
   }
   .details-info {
     display: flex;
-    flex-wrap: wrap;
     .details-info-content {
       margin: 0 15px;
       min-height: 114px;
